--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,9 +1,9 @@
 .list .item {
   border-bottom: 1px solid #e1e1e1;
-  height: 40px;
+  height: 100px;
 }
 .list .item .item-swipe {
-  background: #ffffff;
+  /*background: #ffffff;*/
   padding: 10px;
   z-index: 1;
 }
