--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,10 +5,15 @@ html
     meta(http-equiv='X-UA-Compatible" content="IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='robots', content='noindex')
-    - if (typeof(title) == 'undefined')
-        title hackbar
-    - else
-        title= title
+
+    title CrowdSound - The Sound of the Crowd
+
+    link(rel="apple-touch-icon", sizes="180x180", href="/apple-touch-icon.png")
+    link(rel="icon", type="image/png", sizes="32x32", href="/favicon-32x32.png")
+    link(rel="icon", type="image/png", sizes="16x16", href="/favicon-16x16.png")
+    link(rel="manifest", href="/manifest.json")
+    link(rel="mask-icon", href="/safari-pinned-tab.svg", color="#050505")
+    meta(name="theme-color", content="#ffffff")
 
     // include default stylesheets and any view stylesheets
 
