--- a/views/player/current.jade
+++ b/views/player/current.jade
@@ -1,14 +1,15 @@
 .wrapper
     .detail.open.ready
-        .info
-            if currentSong.external_urls.spotify
-                a(href=currentSong.external_urls.spotify): i.fa.fa-spotify.close
-            a(href="/queue"): i.fa.fa-tasks.close
+        - var bg = currentSong.album.images[0].url
+        .info(style='background-image:url("'+ bg + '")')
+            .nav
+                if currentSong.external_urls.spotify
+                    a(href=currentSong.external_urls.spotify): i.fa.fa-spotify.close
+                a(href="/queue"): i.fa.fa-tasks.close
             .slider(style='touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);')
                 .slide
                     .thumb
-                        div(style='background-image:url("' + currentSong.album.images[0].url + '")')
-                        div(style='background-image:url("' + currentSong.album.images[0].url + '")')
+                        div(style='background-image:url("' + bg + '")')
                     .title
                         a(href="/downvote"): i.fa(class=(voted == 'down' ? 'fa-thumbs-down' : 'fa-thumbs-o-down'))
                         h3
