--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -8,7 +8,7 @@ button {
 		border-bottom: 1px solid @lightgray;
 		height: 100px;
 		.item-swipe {
-			background: @white;
+			/*background: @white;*/
 			padding: 10px;
 			z-index: 1;
             div {
@@ -44,7 +44,7 @@ button {
         }
 
 		.item-back {
-			background: @white;
+			/*background: @white;*/
 			padding: 10px;
 			text-align: right;
 			.action {
