--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -6,7 +6,8 @@ button {
   height: 100px;
 }
 .list .item .item-swipe {
-  background: #ffffff;
+  /*background: @white;*/
+
   padding: 10px;
   z-index: 1;
 }
@@ -40,7 +41,8 @@ button {
   color: inherit;
 }
 .list .item .item-back {
-  background: #ffffff;
+  /*background: @white;*/
+
   padding: 10px;
   text-align: right;
 }
@@ -120,7 +122,7 @@ button {
   position: relative;
   display: flex;
   height: 610px;
-  margin: 10px auto;
+  margin: 0px auto;
 }
 .list {
   width: 100%;
@@ -217,7 +219,7 @@ button {
 .detail i.close {
   opacity: 0;
   position: absolute;
-  right: 15px;
+  right: 60px;
   top: 10px;
   color: #fff;
   font-size: 24px;
@@ -249,11 +251,14 @@ button {
 .detail.open .info .title {
   animation: expand-on 0.5s ease;
 }
-.detail.open .info .nav {
+.detail.open .info .nav .overlay {
   display: block;
   background-color: #ffffff;
   height: 40px;
   opacity: 0.5;
+}
+.detail.open .info .icons {
+  display: inline-block;
 }
 .detail.open .player {
   animation: expand-on 0.25s ease;
