Remove swipe functionality

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,4 +46,4 @@ html
 
           script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
           script(src='/javascripts/main.js')
-          script(src='/javascripts/swipeTo.js')
+          //script(src='/javascripts/swipeTo.js')
