--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,7 +34,10 @@ html
 
     if (messages.info)
         .message.info(style="position: fixed; top: 10px; right: 10px; width: 220px;z-index:9000000")
-            div.alert.alert-success= messages.info
+            div.alert.alert-success
+                button(type="button", class="close", data-dismiss="alert", aria-label="Close")
+                    span(aria-hidden="true") &times;
+                span= messages.info
 
     block nav
 
