Change nav header

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -64,6 +64,12 @@ button {
 .list .item .item-back .action.second {
   right: 50px;
 }
+a.fill-div {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
 .btn-like {
   background: #b22222;
 }
