--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -69,6 +69,13 @@ button {
 	}
 }
 
+a.fill-div {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+
 .btn-like {
 	background: @firebrick;
 }
