--- a/views/nav.jade
+++ b/views/nav.jade
@@ -1,19 +1,3 @@
 nav(class="navbar-inverse")
     div(class="container")
-        div(class="navbar-header")
-            button(type="button", class="navbar-toggle collapsed", data-toggle="collapse", data-target="#navbar", aria-expandedfalse", aria-controls="navbar")
-            span(class="sr-only") Toggle navigation
-            span(class="icon-bar")
-            span(class="icon-bar")
-            span(class="icon-bar")
-            a(class="navbar-brand", href="#") Hackbar
-        div(id="navbar", class="collapse navbar-collapse")
-            ul(class="nav navbar-nav")
-                li(class="active")
-                    a(href="#") Home
-                li
-                    a(href="/spotify") Spotify controls
-                li
-                    a(href="/vote/volume") Volume voting
-                li
-                    a(href="/chat") Chat
+        a(href='search') Add a song
