--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,7 +41,8 @@ html
   body
 
     if (messages.info)
-        .message.info(style="position: fixed; top: 10px; right: 10px; width: 220px;z-index:9000000")
+        .message.info(style="position: fixed; top: 10px; left: 0px; z-index:9000000; width: 100%;")
+          .width-container
             div.alert.alert-success
                 button(type="button", class="close", data-dismiss="alert", aria-label="Close")
                     span(aria-hidden="true") &times;
