Main view refactored

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -721,16 +721,17 @@ a.fill-div {
   object-fit: cover;
 }
 .desktop-vspace {
-  margin-top: 1em;
-  margin-bottom: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+.vspace {
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 @media (max-width: 768px) {
-  .bg-image {
-    display: none;
-  }
   .desktop-vspace {
-    margin-top: 0;
-    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 .width-container {
@@ -756,8 +757,8 @@ a.fill-div {
   background: #fff;
 }
 .cover-art-width {
-  max-width: 50vmin;
-  max-height: 50vmin;
+  max-width: 68vmin;
+  max-height: 68vmin;
 }
 .cover-art-image {
   width: 100%;
@@ -789,14 +790,24 @@ a.fill-div {
   flex-grow: 1;
 }
 .next-button {
-  height: 12vmin;
-  width: 12vmin;
-  border-radius: 6vmin;
-  border: 1px solid #ccc;
+  height: 20vmin;
+  width: 20vmin;
+  border-radius: 10vmin;
+  /* border: 1px solid #E0E0E0; */
+
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 6vmin;
+  background: #E0E0E0;
+}
+.control-button {
+  color: #757575;
+}
+.song-info {
+  font-size: 120%;
+}
+.squished {
+  line-height: 0.9;
 }
 * {
   box-sizing: border-box;
