--- a/views/player/current.jade
+++ b/views/player/current.jade
@@ -1,35 +1,34 @@
 - var bg = currentSong.album.images[0].url
-.wide-wrapper
-    .width-container
-        div.cover-art-width.block-center.desktop-vspace
-            if currentSong.external_urls.spotify
-                a(href=currentSong.external_urls.spotify)
-                    i.fa.fa-spotify
-                    | &nbsp;Open in Spotify
+.wide-wrapper(style="background: #2bbbad;")
+    if currentSong.external_urls.spotify
+            a.vspace.block-center.text-center(href=currentSong.external_urls.spotify, style="color: #fff;")
+                i.fa.fa-spotify
+                | &nbsp;Open in Spotify
 
-.wide-wrapper(style="margin-bottom: 1em;")
+.wide-wrapper.vspace(style="margin-bottom: 1em;")
     img.bg-image(src=bg)
     .width-container
         .info.text-center
-            div.cover-art-width.block-center.pos-rel.desktop-vspace
+            div.cover-art-width.block-center.pos-rel
                 img.cover-art-image(src=bg)
                 div.progress-bar
 .wide-wrapper
     .width-container
 
-        div.flex-container(style="margin-bottom: 1em;")
-            a(href="/downvote/" + currentSong.uri, style="margin-left: 1em;"): i.fa(class=(voted == 'down' ? 'fa-thumbs-down' : 'fa-thumbs-o-down'))
+        div.flex-container(style="margin-bottom: 2em;")
+            a(href="/downvote/" + currentSong.uri, style="margin-left: 1em;"): i.fa.fa-2x.control-button(class=(voted == 'down' ? 'fa-thumbs-down' : 'fa-thumbs-o-down'))
             div(style="flex-grow: 1; margin-left: 1em; margin-right: 1em;")
-                div.text-center.truncated= currentSong.name
-                div.text-center.truncated
-                    small= currentSong.artists.map(a => a.name).join(', ') + ' - ' + currentSong.album.name
-            a(href="/upvote/" + currentSong.uri, style="margin-right: 1em;"): i.fa(class=(voted == 'up' ? 'fa-thumbs-up' : 'fa-thumbs-o-up'))
-        div.flex-container(style="margin-bottom: 1em;")
-            a.fg-1.text-center(href="/volume/down"): i.fa.fa-volume-down
+                div.text-center.truncated.song-info= currentSong.name
+                div.text-center.truncated.song-info.squished
+                    small= currentSong.artists.map(a => a.name).join(', ')
+                div.text-center.truncated.song-info.squished
+                    small= currentSong.album.name
+            a(href="/upvote/" + currentSong.uri, style="margin-right: 1em;"): i.fa.fa-2x.control-button(class=(voted == 'up' ? 'fa-thumbs-up' : 'fa-thumbs-o-up'))
+        div.flex-container(style="margin-bottom: 2em;")
+            a.fg-1.text-center(href="/volume/down"): i.fa.fa-volume-down.fa-2x.control-button
             div.fg-1.text-center
-                a.next-button.block-center(href='/skip', class=hasSkipped ? 'disabled' : '', title="Skip current song")
-                    i.fa.fa-step-forward
-            a.fg-1.text-center(href="/volume/up"): i.fa.fa-volume-up
-        a.btn.btn-block.btn-default(href="/queue")
-            i.fa.fa-list.close
+                a.next-button.block-center.control-button(href='/skip', class=hasSkipped ? 'disabled' : '', title="Skip current song")
+                    i.fa.fa-step-forward.fa-3x
+            a.fg-1.text-center(href="/volume/up"): i.fa.fa-volume-up.fa-2x.control-button
+        a.block-center.text-center(href="/queue", style="background: #2bbbad; color: #fff; padding: 1em;")
             | View Queue
