--- a/public/stylesheets/variables.less
+++ b/public/stylesheets/variables.less
@@ -3,5 +3,6 @@
 @dark:					#333333;
 @firebrick:				#B22222;
 @green:					#008000;
-@turquoise:             #51AFCF;
 @smarthphone-break:     768px;
+@art-width:             68vmin;
+@next-size:             20vmin;
