--- a/public/stylesheets/variables.less
+++ b/public/stylesheets/variables.less
@@ -6,3 +6,5 @@
 @smarthphone-break:     768px;
 @art-width:             68vmin;
 @next-size:             20vmin;
+@musiclist-cover:       20vmin;
+@crowdsound:            #2bbbad;
