Add song refactoring

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -804,10 +804,10 @@ a.fill-div {
   color: #757575;
 }
 .song-info {
-  font-size: 120%;
+  font-size: 1.3rem;
 }
 .squished {
-  line-height: 0.9;
+  line-height: 1.3rem;
 }
 .music-list {
   display: flex;
