--- a/public/stylesheets/player.less
+++ b/public/stylesheets/player.less
@@ -824,11 +824,12 @@
 }
 
 .song-info {
-  font-size: 120%;
+  //font-size: 120%;
+  font-size: 1.3rem;
 }
 
 .squished {
-  line-height: 0.9;
+  line-height: 1.3rem;
 }
 
 .music-list {
