Smaller visual changes

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -824,8 +824,20 @@ a.fill-div {
 .music-list-entry + .music-list-entry {
   border-top: 1px solid #E0E0E0;
 }
-.music-list-entry.active {
+.music-list-entry.active,
+.crowdsound-btn {
   background: #2bbbad;
+}
+.crowdsound-btn {
+  color: #fff;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  display: inline-block;
+  border: none;
+}
+.crowdsound-btn-block {
+  display: block;
+  width: 100%;
 }
 .music-list-entry.active,
 .music-list-entry.active a {
