--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -1,85 +1,3 @@
 @import 'variables';
-
-button {
-  border-radius: 0;
-}
-.list {
-	.item {
-		border-bottom: 1px solid @lightgray;
-		height: 100px;
-		.item-swipe {
-			/*background: @white;*/
-			padding: 10px;
-			z-index: 1;
-            div {
-              width: 50%;
-            }
-			&.open {
-				background: @white;
-				&:before {
-					content: "\f00d";
-					font-family: FontAwesome;
-					font-style: normal;
-					font-weight: normal;
-					text-decoration: inherit;
-					color: @white;
-					position: absolute;
-					right: 10px;
-				}
-			}
-		}
-
-        .item-swipe {
-            color: @dark;
-            text-decoration: inherit;
-            .cover-thumbnail {
-              float: left;
-              width: 80px;
-              height: 80px;
-              margin-right: 10px;
-            }
-            &:active {
-                color: inherit;
-            }
-        }
-
-		.item-back {
-			/*background: @white;*/
-			padding: 10px;
-			text-align: right;
-			.action {
-				position: absolute;
-				top: 0;
-				bottom: 0;
-				right: 0;
-				width: 50px;
-				border: inherit;
-				outline: inherit;
-				color: @white;
-				padding: 0;
-				font-size: 22px;
-				&.first {
-					right: 0;
-				}
-				&.second {
-					right: 50px;
-				}
-			}
-		}
-	}
-}
-
-a.fill-div {
-  display: block;
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
-}
-
-.btn-like {
-	background: @firebrick;
-}
-
-.btn-dislike {
-	background: @dark;
-}
+@import "player";
+@import 'chat';
