--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,6 @@ html
     title CrowdSound - The Sound of the Crowd
     meta(name="description", content="Lauter? Leiser? Next!")
 
-
     link(rel="apple-touch-icon", sizes="180x180", href="/apple-touch-icon.png")
     link(rel="icon", type="image/png", sizes="32x32", href="/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="16x16", href="/favicon-16x16.png")
@@ -24,14 +23,13 @@ html
     meta(name="theme-color", content="#ffffff")
 
     // include default stylesheets and any view stylesheets
-
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css')
     link(rel='stylesheet prefetch', href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css')
     link(rel='stylesheet prefetch', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(rel='stylesheet prefetch', href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,300,700,700italic')
-    link(rel='stylesheet', href='/stylesheets/all.css')
+    link(rel='stylesheet', href='/stylesheets/main.css')
 
     script(src='/javascripts/jquery-1.8.3.min.js')
     script(src='/javascripts/modernizr.js')
@@ -50,7 +48,6 @@ html
 
     block nav
 
-    //div#body(class="")
     block content
 
     footer
@@ -58,4 +55,3 @@ html
 
           script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
           script(src='/javascripts/main.js')
-          //script(src='/javascripts/swipeTo.js')
