--- a/views/player/queue.jade
+++ b/views/player/queue.jade
@@ -4,7 +4,7 @@ block nav
     div.flex-container(style="background-color: #E0E0E0;")
         a(href='/', style="padding-left: 1em; padding-right: 1em; color: #000;")
             i.fa.fa-angle-left.fa-2x
-        div.navbar-text.text-center.fg-1 Current Queue
+        .navbar-text.text-center.fg-1 Current Playlist
 
 block content
     .music-list
@@ -21,6 +21,6 @@ block content
                     a.control-button(href="/downvote/" + entry.track.uri)
                         i.fa(class=(voted[entry.track.uri] == 'down' ? 'fa-thumbs-down' : 'fa-thumbs-o-down'))
 
-    div.fixed-action-btn
+    .fixed-action-btn
         a.btn-floating.btn-large.waves-effect.waves-light.red(href='search')
             i.material-icons add
