--- a/views/player/current.jade
+++ b/views/player/current.jade
@@ -30,4 +30,4 @@
                     i.fa.fa-step-forward.fa-3x
             a.fg-1.text-center(href="/volume/up"): i.fa.fa-volume-up.fa-2x.control-button
         a.block-center.text-center(href="/queue", style="background: #2bbbad; color: #fff; padding: 1em;")
-            | View Queue
+            | View Playlist
